# flamed

./: CMakeLists.txt  README.rst  compute_flames.cpp  compute_flames.cu  compute_flames.h  flamed.cpp  flamed.h  flames.cpp  flames.h  hdri.glsl  point_accum.glsl  util.h
doc/: bgpu_talk.tex  bibliography.bib  gengraphs.py  page0.flamed  page1.flamed  page10.flamed  page11.flamed  page2.flamed  page3.flamed  page4.flamed  page5.flamed  page6.flamed  page7.flamed  page9.flamed
